Fix minor issues in rollingstock editor: - fix overflow behavior on rollingstock list
- add global error message in catch if post(duplicate) fails

- Fix default rollingstock image

- Fix error when clicking on a rollingstock after deleting one

- Keep the form opened with values if error occurs.

- fix responsive of Add button & proper scroll behavior for the list

- Add duplicate name error when updating a rollingstock

- fix hidden buttons when rollingstock image is too large

- Fix comments

--- a/front/src/styles/scss/applications/rollingStockEditor/_rollingStockForm.scss
+++ b/front/src/styles/scss/applications/rollingStockEditor/_rollingStockForm.scss
@@ -1,13 +1,9 @@
 .rollingstock-editor {
-  padding-top: 9%;
-  @media screen and (min-width: 1024px) {
-    padding-top: 100px;
-  }
+  padding-top: 6rem;
+  max-height: 100vh;
   &-list {
     height: 100%;
     overflow-y: scroll;
-  }
-  &-list {
     .rollingstock-body-container-img {
       min-height: 2.4rem;
     }
